manifest/objects/tinderbox__TinderBox__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Octiv Settings</description>
    <fields>
        <fullName>tinderbox__Company_URL__c</fullName>
        <inlineHelpText>Your organization&apos;s TinderBox URL. For instance, acme.mytinder.com.</inlineHelpText>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tinderbox__Disable_SessionID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will not pass sessionID or serverURL from VisualForce pages to TinderBox iframes. Instead userID is passed and the integration account is relied on for all API requests.</description>
        <inlineHelpText>Enable this option if you do not want Session IDs to be passed to TinderBox.</inlineHelpText>
        <label>Disable Session ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tinderbox__Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record Log statements to the log file.</description>
        <inlineHelpText>Record Log statements to the log file.</inlineHelpText>
        <label>Logging</label>
        <type>Checkbox</type>
    </fields>
    <label>Octiv</label>
</CustomObject>